updated mapController to handle dropping a marker and popup that come from our list view. Also fixed the no scrolling problem by removing overflow in CSS.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -141,27 +141,12 @@ a.regular {
   margin-bottom: 20px;
 }
 
-// .map-controller {
-// 	height: 100%;
-// 	width: 100%;
-// 	margin-bottom: 20px;
-// }
 
-
+/*
 html, body, #map
 {
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
-
-// body {
-//   //padding-top: 50px;
-// }
-
-.map-container-fluid {
-  height: 100%;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
+*/
